--- a/index.html
+++ b/index.html
@@ -5,76 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>backgammon</title>
-    <link rel="stylesheet" href="./assets/css/index.css">/>
+    <link rel="stylesheet" href="./assets/css/index.css">
 </head>
 <body>
 
-
-    <!-- MAINPAGE BEGINS -->
-    <main>
-
-        <article class="headliner">
-            <header>HEADLINE!</header>
-
-            <aside><span><i>aside</i></span>
-                <p><span class="title">aside title</span></p>
-                <p>aside text p</p>
-            </aside>
-
-            <aside>
-                <p></p>
-            </aside>
-
-            <footer>
-
-            </footer>
+    <main> <!-- MAINPAGE BEGINS -->
+        <article id="board">
+            <svg width="296.27mm" height="188.32mm" viewBox="0 0 296.27 188.32" style="transform:scale(0.8)" xmlns="http://www.w3.org/2000/svg">
+                <g transform="translate(10.326 -134.72)">
+                    <rect x="2.2931" y="145.24" width="234.74" height="167.51" fill="#e9afdd"/>
+                    <rect x="251.31" y="170.69" width="13.599" height="117.15" fill="none"/>
+                    <path d="m10.64 244.24 9.1622 68.511h-17.946z" fill="#808080"/>
+                    <path d="m46.533 244.24 9.1622 68.511h-17.946z" fill="#808080"/>
+                    <path d="m82.425 244.24 9.1622 68.511h-17.946z" fill="#808080" />
+                    <path d="m29.024 213.75 9.1622-68.511h-17.946z" fill="#808080" />
+                    <path d="m64.916 213.75 9.1622-68.511h-17.946z" fill="#808080" />
+                    <path d="m100.81 213.75 9.1622-68.511h-17.946z" fill="#808080" />
+                    <path d="m28.586 244.24 9.1622 68.511h-17.946z" fill="#782167" opacity=".75" />
+                    <path d="m64.479 244.24 9.1622 68.511h-17.946z" fill="#782167" opacity=".75" />
+                    <path d="m100.37 244.24 9.1622 68.511h-17.946z" fill="#782167" opacity=".75" />
+                    <path d="m46.97 213.75 9.1622-68.511h-17.946z" fill="#782167" opacity=".75" />
+                    <path d="m82.863 213.75 9.1622-68.511h-17.946z" fill="#782167" opacity=".75" />
+                    <circle cx="120.31" cy="202.98" r="7.0898" fill="#501644"  />
+                    <rect x="250.87" y="280.99" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="250.87" y="277.57" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="250.87" y="274.15" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="250.87" y="270.72" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="250.87" y="267.3" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="250.87" y="263.88" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="250.87" y="260.45" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="250.87" y="257.03" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="250.87" y="253.61" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="250.87" y="250.18" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="250.87" y="246.76" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="250.87" y="243.34" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="250.87" y="239.91" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="250.87" y="236.49" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="250.87" y="284.42" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#501644"  />
+                    <rect x="251.31" y="170.69" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <rect x="251.31" y="218.62" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <rect x="251.31" y="215.19" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <rect x="251.31" y="211.77" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <rect x="251.31" y="208.35" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <rect x="251.31" y="204.92" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <rect x="251.31" y="201.5" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <rect x="251.31" y="198.08" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <rect x="251.31" y="194.65" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <rect x="251.31" y="191.23" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <rect x="251.31" y="187.81" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <rect x="251.31" y="184.38" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <rect x="251.31" y="180.96" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <rect x="251.31" y="177.54" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <rect x="251.31" y="174.11" width="14.037" height="3.4233" rx=".69244" ry=".69244" fill="#666"  />
+                    <path d="m11.077 213.75 9.1622-68.511h-17.946z" fill="#782167"  opacity=".75" />
+                    <path d="m109.1 312.75 0.43737-167.51h20.257v167.67z" fill="none"/>
+                    <path d="m138.14 244.24 9.1622 68.511h-17.946z" fill="#808080"  />
+                    <path d="m174.03 244.24 9.1622 68.511h-17.946z" fill="#808080"  />
+                    <path d="m209.92 244.24 9.1622 68.511h-17.946z" fill="#808080"  />
+                    <path d="m156.52 213.75 9.1622-68.511h-17.946z" fill="#808080"  />
+                    <path d="m192.41 213.75 9.1622-68.511h-17.946z" fill="#808080"  />
+                    <path d="m228.31 213.75 9.1622-68.511h-17.946z" fill="#808080"  />
+                    <path d="m156.08 244.24 9.1622 68.511h-17.946z" fill="#782167"  opacity=".75" />
+                    <path d="m191.98 244.24 9.1622 68.511h-17.946z" fill="#782167"  opacity=".75" />
+                    <path d="m227.87 244.24 9.1622 68.511h-17.946z" fill="#782167"  opacity=".75" />
+                    <path d="m174.47 213.75 9.1622-68.511h-17.946z" fill="#782167"  opacity=".75" />
+                    <path d="m210.36 213.75 9.1622-68.511h-17.946z" fill="#782167"  opacity=".75" />
+                    <circle cx="119.65" cy="186.3" r="7.0898" fill="#666"  />
+                    <path d="m138.58 213.75 9.1622-68.511h-17.946z" fill="#782167"  opacity=".75" />
+                    <rect x="-4.8257" y="140.22" width="285.27" height="177.32" fill="none" stroke="#501644" stroke-linecap="round" />
+                </g>
+            </svg>
         </article>
-
-
-        <article class="main_game">
-
-
-
-            <header>game title</header>
-
-
-
-            <div class="main_game_div">
-                <span>hook me</span>        
-            </div>
-
-
-
-
-            <div id="board0">
-                <title>main board</title>
-                
-                <span>hook me</span>
-                <div class="row">
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                </div>
-                <div class="row">
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                    <div class="col"></div>
-                </div>
-            </div>
-
-
-
-
-        </article>
-
-    </main>
-    <!-- MAINPAGE ENDS -->
-    <footer><code>MIT</code> MATT LORBER <code>2020</code></footer>
+    </main> <!-- MAINPAGE ENDS -->
+    
+    <footer> <!-- FOOTER -->
+    </footer>
 </body>
 </html>
