--- a/index.html
+++ b/index.html
@@ -17,27 +17,30 @@
             <span id="invite">invite</span>
             <span id="fullscreen">fullscreen</span>
             <span>stats</span>
-            <span id="colors">colors</span>
         </div>
-        <div id="things2"> <!-- SECONDARY TOOLS -->
-            <span>black<input class="color" type="color" id="black" value="#f6b73c"></span>
-            <span>white<input class="color" type="color" id="white" value="#f6b73c"></span>
-            <span>page<input class="color" type="color" id="page" value="#f6b73c"></span>
-            <span>board<input class="color" type="color" id="backgd" value="#f6b73c"></span>
-            <span>border<input class="color" type="color" id="border" value="#f6b73c"></span>
-            <span>dice<input class="color" type="color" id="border" value="#f6b73c"></span>
-            <span>dots<input class="color" type="color" id="border" value="#f6b73c"></span>
+        <!-- COLOR PICKERS -->
+        <div id="colors">
+            <span>black<input class="color" type="color" id="black" value="#111"></span>
+            <span>white<input class="color" type="color" id="white" value="#111"></span>
+            <span>page<input class="color" type="color" id="page" value="#111"></span>
+            <span>board<input class="color" type="color" id="background" value="#111"></span>
+            <span>inset<input class="color" type="color" id="inset-sel" value="#111"></span>
+            <span>border<input class="color" type="color" id="border" value="#111"></span>
+            <span>dice<input class="color" type="color" id="dice-color" value="#111"></span>
+            <span>dots<input class="color" type="color" id="dice-dots" value="#111"></span>
         </div>
     </article>
 
     <!-- ROLL -->
     <article id="roll">🎲🎲</article>
+
     <!-- GAMEBOARD -->
     <article>
         <svg id="board" width="296.27mm" height="188.32mm" viewBox="0 0 296.27 188.32" style="transform:scale(0.8)" xmlns="http://www.w3.org/2000/svg">
             <g transform="translate(10.326 -134.72)">
-                <rect x="2.2931" y="145.24" width="234.74" height="167.51" fill="#e9afdd"/>
-                <rect x="251.31" y="170.69" width="13.599" height="117.15" fill="none"/>
+                <rect id="board-border" class="background" x="-4.8257" y="140.22" width="285.27" height="177.32" stroke-linecap="round" />
+                <rect id="inset" x="2.2931" y="145.24" width="234.74" height="167.51"/>
+                <!-- <rect x="251.31" y="170.69" width="13.599" height="117.15" style="fill:none"/> -->
                 <!-- TRIANGLES -->
                 <path class="black" d="m10.64 244.24 9.1622 68.511h-17.946z"/>
                 <path class="black" d="m46.533 244.24 9.1622 68.511h-17.946z"/>
@@ -63,7 +66,7 @@
                 <path class="white" d="m210.36 213.75 9.1622-68.511h-17.946z"/>
                 <path class="white" d="m11.077 213.75 9.1622-68.511h-17.946z"/>
                 <path class="white" d="m138.58 213.75 9.1622-68.511h-17.946z"/>
-                <circle cx="120.31" cy="202.98" r="7.0898" fill="#501644"  />
+                <circle cx="120.31" cy="202.98" r="7.0898"/>
                 <!-- SPARE PIECES -->
                 <rect class="black" x="250.87" y="280.99" width="14.037" height="3.4233" rx=".69244" ry=".69244"/>
                 <rect class="black" x="250.87" y="277.57" width="14.037" height="3.4233" rx=".69244" ry=".69244"/>
@@ -95,9 +98,8 @@
                 <rect class="white" x="251.31" y="180.96" width="14.037" height="3.4233" rx=".69244" ry=".69244"  />
                 <rect class="white" x="251.31" y="177.54" width="14.037" height="3.4233" rx=".69244" ry=".69244"  />
                 <rect class="white" x="251.31" y="174.11" width="14.037" height="3.4233" rx=".69244" ry=".69244"  />
-                <path d="m109.1 312.75 0.43737-167.51h20.257v167.67z" fill="none"/>
-                <circle cx="119.65" cy="186.3" r="7.0898" fill="#666"  />
-                <rect x="-4.8257" y="140.22" width="285.27" height="177.32" fill="none" stroke="#501644" stroke-linecap="round" />
+                <path class="background" d="m109.1 312.75 0.43737-167.51h20.257v167.67z"/>
+                <circle cx="119.65" cy="186.3" r="7.0898"/>
             </g>
         </svg>
     </article>
