inserted gameplay.js

--- a/index.html
+++ b/index.html
@@ -166,5 +166,6 @@
     <script src="./assets/js/jquery.3.4.1.min.js"></script>
     <script src="./assets/js/index.js"></script>
     <script src="./assets/js/database.js"></script>
+    <script src="./assets/js/gameplay.js"></script>
 </body>
 </html>
